--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 .flaskenv
 *.pyc
 *.pyo
-env/
-env*
+# env/
+# env*
 dist/
 build/
 *.egg
@@ -16,7 +16,7 @@ _mailinglist
 .idea/
 docs/_build/
 __pycache__
-.env_file
+
 
 # Coverage reports
 htmlcov/
